--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy": "ng deploy",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -34,6 +35,10 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.0",
     "@types/leaflet.markercluster": "^1.5.1",
+    "@types/facebook-js-sdk": "^3.3.6",
+    "@types/gapi": "0.0.43",
+    "@types/gapi.auth2": "0.0.56",
+    "@types/gtag.js": "0.0.12",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
