--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,11 @@
             "polyfills": [
               "zone.js"
             ],
+            "allowedCommonJsDependencies": [
+              "leaflet",
+              "compressorjs",
+              "events"
+           ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
